fix(KAN-114): Restore structural gaps

--- a/src/components/Services.module.css
+++ b/src/components/Services.module.css
@@ -23,7 +23,7 @@
   height: var(--img-size-mobile);
 }
 
-.copy.copy {
+.copy {
   --stack-gap: var(--m);
   max-width: var(--mobile-text-wrapper);
 }
@@ -47,12 +47,12 @@
   gap: var(--xl);
 }
 
-.badgeGroup.badgeGroup {
+.badgeGroup {
   --stack-gap: var(--m);
   align-items: center;
 }
 
-.badgeGroupAlt.badgeGroupAlt {
+.badgeGroupAlt {
   --stack-gap: var(--s);
   align-items: center;
 }
@@ -96,7 +96,7 @@
   animation-name: expand4;
 }
 
-.servicesGroup.servicesGroup {
+.servicesGroup {
   --stack-gap: var(--m);
   align-items: center;
 }
@@ -122,7 +122,7 @@
     height: var(--img-size-tablet);
   }
 
-  .copy.copy {
+  .copy {
     --stack-gap: var(--s);
     max-width: var(--tablet-text-wrapper);
   }
@@ -131,12 +131,12 @@
     gap: var(--2xl);
   }
 
-  .badgeGroup.badgeGroup {
+  .badgeGroup {
     --stack-gap: var(--l);
   }
 
-  .badgeGroupAlt.badgeGroupAlt,
-  .servicesGroup.servicesGroup {
+  .badgeGroupAlt,
+  .servicesGroup {
     --stack-gap: var(--l);
   }
 
@@ -194,7 +194,7 @@
     height: auto;
   }
 
-  .copy.copy {
+  .copy {
     width: 58.333%;
     max-width: var(--desktop-text-wrapper);
   }
@@ -203,9 +203,9 @@
     gap: var(--3xl);
   }
 
-  .badgeGroup.badgeGroup,
-  .badgeGroupAlt.badgeGroupAlt,
-  .servicesGroup.servicesGroup {
+  .badgeGroup,
+  .badgeGroupAlt,
+  .servicesGroup {
     --stack-gap: var(--xl);
   }
 
